# randconvpruning

./: .gitignore  README.md  environment.py  environment.txt  parser.py  pyproject.toml  randconv_trainer.py  requirements.txt  run_digits.sh  run_har.sh  train_digits.py  train_har.py
randconvpruning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/datasets/: __init__.py  data_helper.py  hhar.py  mnist_10k.py  opportunity.py  pamap2.py  realworld.py  standard_dataset.py  transforms.py  usps.py  utils.py
src/layers/: __init__.py  base.py  pruning.py  quantization.py  rand_conv.py  utils.py
src/layers/tests/: test_rand_conv.py  todo.txt
src/networks/: __init__.py  digit_net.py  hhar_nn.py  network_helper.py  resnet.py
src/pruning/: FPGMheuristic.py  L1heuristic.py  SNIPheuristic.py  Synflowheuristic.py  __init__.py  fpgm_heuristic.py  l1_heuristic.py  pruning_helper.py  snip_heuristic.py  structuredpruning.py  synflow_heuristic.py  unstructuredpruning.py  utils.py
