[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "randconvpruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow[and-cuda]>=2.19.0",
    "tensorflow-datasets>=4.9.7",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
# Set the maximum line length to 80.
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["UP","D415","D400","D212","RET504","FA","FBT001","FBT002","S301","ANN101","ANN204","D107","ANN102","PT009","PERF203","BLE001","T201","D100","PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
